Allow blank size, version, and color for products

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -7,12 +7,12 @@
 #  created_at   :datetime         not null
 #  updated_at   :datetime         not null
 #  brand_id     :bigint           not null
-#  color_id     :bigint           not null
+#  color_id     :bigint
 #  franchise_id :bigint           not null
 #  shape_id     :bigint           not null
-#  size_id      :bigint           not null
+#  size_id      :bigint
 #  supplier_id  :bigint           not null
-#  version_id   :bigint           not null
+#  version_id   :bigint
 #
 
 one:
