--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
     "@prettier/plugin-ruby": "^4.0.2",
-    "prettier": "^3.0.0"
+    "postcss": "^8.4.35",
+    "prettier": "^3.0.0",
+    "prettier-plugin-css-order": "^2.0.1"
   }
 }
