Update gems, reset chache in CI

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.3.3
           bundler-cache: true
+          cache-version: 1
 
       - name: Install libvips
         run: >-
