Disable until we need it

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -25,6 +25,8 @@ RSpec/DescribeClass:
   Enabled: false # ignore missing comments on classes
 RSpec/MultipleMemoizedHelpers:
   Enabled: false # ignore multiple memoized helpers
+RSpec/ExampleLength:
+  Enabled: false
 Bundler/DuplicatedGem:
   Enabled: false # ignore duplicated gem errors because we will have duplicated gems when dual booting
 Rails/I18nLocaleTexts:
