--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,8 +9,8 @@ local:
 
 cloudflare:
   service: S3
-  endpoint: https://<%= Rails.application.credentials.dig(:cloudflare, :account_id) %>.eu.r2.cloudflarestorage.com
-  access_key_id: <%= Rails.application.credentials.dig(:cloudflare, :access_key_id) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:cloudflare, :secret_access_key) %>
+  endpoint: https://<%= ENV["CLOUDFLARE_ACCOUNT_ID"] %>.eu.r2.cloudflarestorage.com
+  access_key_id: <%= ENV["CLOUDFLARE_ACCESS_KEY_ID"] %>
+  secret_access_key: <%= ENV["CLOUDFLARE_SECRET_ACCESS_KEY"] %>
   region: auto
-  bucket: <%= Rails.application.credentials.dig(:cloudflare, :bucket) %>
+  bucket: <%= ENV["CLOUDFLARE_BUCKET"] %>
