--- a/config/storage.yml
+++ b/config/storage.yml
@@ -14,3 +14,5 @@ cloudflare:
   secret_access_key: <%= ENV["CLOUDFLARE_SECRET_ACCESS_KEY"] %>
   region: auto
   bucket: <%= ENV["CLOUDFLARE_BUCKET"] %>
+  request_checksum_calculation: "when_required"
+  response_checksum_validation: "when_required"
