Feat: Integrate strong_migrations gem for safer database migrations
This commit introduces the `strong_migrations` gem to enhance the safety and reliability of database migrations.

The following changes were made:

- Added the `strong_migrations` gem to the Gemfile.
- Created an initializer (`config/initializers/strong_migrations.rb`) to configure `strong_migrations` with default settings, including:
  - Setting a start after date to mark existing migrations as safe.
  - Setting lock and statement timeouts.
  - Enabling auto-analyze after index creation.
- Updated `.rubocop.yml` to include `strong_migrations` and adjust plugin ordering.
- Updated `Gemfile.lock` to reflect the added gem and dependency updates.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,12 @@
 require:
   - standard
-  - rubocop-rails
-  - rubocop-rspec
-  - rubocop-performance
   - rubocop-slim
   - database_validations/rubocop/cops
+
+plugins:
+  - rubocop-performance
+  - rubocop-rails
+  - rubocop-rspec
 
 inherit_gem:
   standard: config/base.yml
@@ -19,6 +21,16 @@ AllCops:
 
 Rails:
   Enabled: true # enable rubocop-rails cops
+Rails/I18nLocaleTexts:
+  Enabled: false
+Rails/UnknownEnv:
+  Environments:
+    - development
+    - test
+    - production
+    - staging
+Layout/ClassStructure:
+  Enabled: true
 RSpec:
   Enabled: true # enable rubocop-rspec cops
 RSpec/DescribeClass:
@@ -29,5 +41,3 @@ RSpec/ExampleLength:
   Enabled: false
 Bundler/DuplicatedGem:
   Enabled: false # ignore duplicated gem errors because we will have duplicated gems when dual booting
-Rails/I18nLocaleTexts:
-  Enabled: false
