--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,7 @@ inherit_gem:
 
 AllCops:
   NewCops: enable
+  TargetRubyVersion: 3.4
   Exclude:
     - node_modules/**/*
     - public/**/*
@@ -31,6 +32,30 @@ Rails/UnknownEnv:
     - staging
 Layout/ClassStructure:
   Enabled: true
+  ExpectedOrder:
+    - module_inclusion
+    - constants
+    - macros
+    - public_class_methods
+    - initializer
+    - public_methods
+    - protected_methods
+    - private_methods
+  Categories:
+    association:
+      - has_many
+      - has_one
+    attribute_macros:
+      - attr_accessor
+      - attr_reader
+      - attr_writer
+    macros:
+      - validates
+      - validate
+    module_inclusion:
+      - include
+      - prepend
+      - extend
 RSpec:
   Enabled: true # enable rubocop-rspec cops
 RSpec/DescribeClass:
