Fix: Ensure CI environment variable is set in GitHub Actions workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,7 @@ jobs:
       PGPASSWORD: postgres
       RAILS_ENV: test
       REDIS_HOST: redis
+      CI: true
 
     services:
       postgres:
