Fix: Add asset preparation step for Tailwind in GitHub Actions workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -54,4 +54,8 @@ jobs:
           bundle exec rails db:setup
           bundle exec rails db:test:prepare
 
+      - name: Prepare assets (Tailwind)
+        run: |
+          bundle exec rails assets:precompile
+
       - run: bundle exec rspec
