feat: Add Shopify product sync functionality
- Add CreateProductJob for background product creation - Create
StoreInfo model to track Shopify store information - Implement
ProductSerializer for Shopify API formatting - Update Product model to
support Shopify integration - Enhance ShopifyApiClient with product
creation capabilities - Configure Shopify app initializer for new
features - Add migration for store_infos table - Update development
dependencies and Solargraph configuration

--- a/.solargraph.yml
+++ b/.solargraph.yml
@@ -1,8 +1,12 @@
 ---
 include:
-  - "**/*.rb"
+  - app/**/*.rb
+  - db/migrate/**/*.rb
+  - db/seeds/**/*.rb
+  - config/**/*.rb
+  - lib/**/*.rb
+  - spec/**/*.rb
 exclude:
-  - spec/**/*
   - test/**/*
   - vendor/**/*
   - ".bundle/**/*"
