refactor: Update UI components and controllers for improved user experience
- Update navigation index view with new styling - Enhance form layouts
across products, purchases, and warehouses - Improve purchase payment
progress visualization - Add search form improvements with better UX -
Update supplier and sale item display components - Refactor color and
warehouse controller implementations - Optimize image preloading
component for better performance - Update application layout with modern
design patterns - Configure RuboCop with additional plugins for better
code quality - Enhance Shopify sale parser for better data handling

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,7 @@ plugins:
   - rubocop-rspec
   - rubocop-rspec_rails
   - rubocop-slim
+  - rubocop-factory_bot
 
 inherit_gem:
   standard: config/base.yml
